tests/paczka1/small_fuzzy/50673475.err
Error in line 7: 3JOKX6GK9so A470 27,4
Error in line 9: SVy S484 94,5
